--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,8 +1,8 @@
-torch==2.1.2
-transformers==4.36.2
-accelerate==0.25.0
-peft==0.7.1
-datasets==2.15.0
-scikit-learn==1.3.2
-tqdm==4.66.1
-huggingface-hub==0.20.2
+torch>=2.1.0,<2.5.0
+transformers>=4.36.0,<5.0.0
+accelerate>=0.25.0,<1.0.0
+peft>=0.7.0,<1.0.0
+datasets>=2.15.0,<3.0.0
+scikit-learn>=1.3.0,<2.0.0
+tqdm>=4.66.0
+huggingface-hub>=0.20.0,<1.0.0
