--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -1,7 +1,16 @@
-transformers>=4.36.0,<5.0.0
-accelerate>=0.25.0,<1.0.0
-peft>=0.7.0,<1.0.0
-datasets>=2.15.0,<3.0.0
-scikit-learn>=1.3.0,<2.0.0
-tqdm>=4.66.0
-huggingface-hub>=0.20.0,<1.0.0
+accelerate==1.11.0
+bitsandbytes==0.48.1
+datasets==4.3.0
+huggingface-hub==0.36.0
+numpy==2.3.3
+pandas==2.3.3
+peft==0.17.1
+python-dateutil==2.9.0.post0
+PyYAML==6.0.3
+scikit-learn==1.7.2
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
+tqdm==4.67.1
+transformers==4.57.1
+
